--- a/src/css/resposive.css
+++ b/src/css/resposive.css
@@ -1,14 +1,3 @@
-@media (max-width: 375px) {
-  body {
-    background: url("../images/bg-mobile.svg") no-repeat;
-  }
-
-  main {
-    display: flex;
-    flex-direction: column;
-  }
-}
-
 @media (max-width: 1024px) {
   .header a img {
     width: 25rem;
@@ -45,33 +34,91 @@
 }
 
 @media (max-width: 768px) {
+  .main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 2rem;
+  }
+
   .image {
-    padding: 3rem 4rem 3rem 0;
+    width: 70%;
+    padding: 0;
+  }
+
+  .content {
+    display: flex;
+    align-items: center;
   }
 
   .content h1 {
-    font-size: 2.5rem;
+    font-size: 4rem;
     padding: 6rem 0 3rem;
+    text-align: center;
   }
 
   .content p {
-    font-size: 1.5rem;
+    font-size: 2.8rem;
+    text-align: center;
   }
 
   .content .btn-register {
-    width: 11rem;
-    font-size: 1.3rem;
+    width: 20rem;
+    font-size: 2rem;
+    padding: 1.5rem;
+  }
+
+  .social {
+    display: flex;
+    justify-content: center;
+    padding-top: 4rem;
+    font-size: 2.5rem;
+  }
+
+  .social a {
+    width: 5rem;
+    height: 5rem;
+  }
+  
+}
+
+@media (max-width: 414px) {
+  body {
+    background: url("../images/bg-mobile.svg") no-repeat;
+  }
+
+  main {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .image{
+    width: 90%;
+  }
+
+  .content h1{
+    font-size: 2.5rem;
+    padding: 5rem 0 2rem;
+  }
+
+  .content p{
+    font-size: 1.7rem;
+  }
+
+  .content .btn-register{
+    width: 18rem;
+    font-size: 1.5rem;
     padding: 1rem;
   }
 
   .social {
-    padding-top: 4rem;
-    font-size: 1.5rem;
+    padding-top: 5rem;
+    font-size: 2rem;
   }
 
   .social a {
-    width: 3rem;
-    height: 3rem;
+    width: 4rem;
+    height: 4rem;
   }
-  
 }
